add 2016 summary buybuybuy

--- a/source/_posts/lifestyles/note_20150920.md
+++ b/source/_posts/lifestyles/note_20150920.md
@@ -7,6 +7,8 @@ tags: life
 从哪里来
 要到哪里去？
 
+<!--more-->
+
 2015年已经进入9月中旬了，回顾这大半年的。
 
 2015年已经过去了，一大半，我已经快26岁了，一年快，20多年也快，今天，忽然感慨，我已经活了20多年了，回顾过去，貌似，都没怎么写过，关于我的文章，特别是最近几年，虽然笔耕不断，但是写的都是技术类的感想笔记，关于自己的，关于过去，关于未来的，虽想过，但是从没用过笔墨来记录，记得《论语》有一段
